Fix horizontale overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,10 +20,8 @@ body {
     background-color: var(--hoofdkleur);
     color: var(--accentkleur);
 
-    > * {
-        width: 100%;
-        max-width: 100vw;
-    }
+    display: flex;
+    flex-direction: column;
 
     * {
         box-sizing: border-box;
